# alphanewcare

./: build.gradle  import-summary.txt  local.properties  settings.gradle
app/: CMakeLists.txt  build.gradle  google-services.json
app/release/: output.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CCFinder.cpp  CCFinder.h  URSDefine.h  native-lib.cpp
app/src/main/res/drawable/: background_button.xml  background_button_blue.xml  background_button_test_result.xml  background_content.xml  background_content_border.xml  background_gray.xml  background_skyblue.xml  background_toolbar.xml  bg_edit_auth.xml  bg_line.xml  fill_black_circle.xml  fill_blue_circle.xml  ios_sheet_bottom_btn_normal_alpha.xml  ios_sheet_bottom_btn_press.xml  ios_sheet_bottom_btn_selector.xml  ios_sheet_middle_btn_normal_alpha.xml  ios_sheet_middle_btn_press.xml  ios_sheet_middle_btn_selector.xml  ios_sheet_sigle_btn_normal.xml  ios_sheet_sigle_btn_press.xml  ios_sheet_sigle_btn_selector.xml  ios_sheet_top_btn_normal.xml  radio_button.xml  round_button_pink.xml  round_gray.xml  round_gray_line.xml  round_green.xml  round_red.xml  round_yellow.xml  shape_circle_default.xml  shape_radius_white.xml  switch_thumb.xml  switch_track_off.xml  switch_track_on.xml  switch_track_selector.xml  tab_selector.xml  test_result_box_empty.xml  test_result_box_green.xml  test_result_box_red.xml  test_result_box_yellow.xml  (+4 more)
app/src/main/res/drawable-xhdpi/: bg_edit.xml  check_button.xml  test_normal.xml
app/src/main/res/drawable-xxhdpi/: test_red.xml
app/src/main/res/layout/: activity_capture.xml  (+60 more)
(+160 files in other folders)
